src/snapshots/nixfmt_rs__ir_format_tests__paren_inner_arg_unexpanded.snap
---
source: src/ir_format_tests.rs
description: f (a b) c
---
[0;95;1m[[0m Group RegularG
    [0;96;1m[[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mf[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing Hardspace
    [0;96;1m,[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m(a[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing Hardspace
    [0;96;1m,[0m Text [0;92;1m3[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mb)[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing Hardspace
    [0;96;1m,[0m Group RegularG
        [0;93;1m[[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mc[0m[0;97;1m"[0m [0;93;1m][0m
    [0;96;1m][0m
[0;95;1m][0m
