src/snapshots/nixfmt_rs__ir_format_tests__path_term_structure.snap
---
source: src/ir_format_tests.rs
description: "./path/to/file"
---
[0;95;1m[[0m Group RegularG
    [0;96;1m[[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m./path/to/file[0m[0;97;1m"[0m [0;96;1m][0m
[0;95;1m][0m
