src/snapshots/nixfmt_rs__ir_format_tests__selection_with_default_structure.snap
---
source: src/ir_format_tests.rs
description: config.services.nginx.enable or false
---
[0;95;1m[[0m Group RegularG
    [0;96;1m[[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mconfig.services.nginx.enable[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing Softspace
    [0;96;1m,[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mor[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing Hardspace
    [0;96;1m,[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mfalse[0m[0;97;1m"[0m
    [0;96;1m][0m
[0;95;1m][0m
